--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; object-src 'none'; script-src 'self' 'sha256-vvt4KWwuNr51XfE5m+hzeNEGhiOfZzG97ccfqGsPwvE='; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; media-src 'self'; connect-src 'self'">
     <title>Angelpwn</title>
+
+      <!-- ✅ Open Graph / Discord / Telegram preview -->
+    <meta property="og:title" content="angelpwn" />
+    <meta property="og:description" content="mov soul, 0xfallen" />
+    <meta property="og:image" content="https://angelpwn.cc/files/angel.avif" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://angelpwn.cc/" />
+    <meta property="og:site_name" content="angelpwn" />
     
     <link rel="preload" href="fonts/FreeSerif.woff2" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="fonts/Inter-Variable.woff2" as="font" type="font/woff2" crossorigin>
