Change background audio source in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="glitch-overlay"></div>
     <div class="crt-lines" aria-hidden="true"></div>
-    <audio id="bg-audio" src="files/D4NCE4LLNIGHT.m4a" preload="none" loop></audio>
+    <audio id="bg-audio" src="files/0x0.m4a" preload="none" loop></audio>
     <div class="boot-sequence" id="boot">
       <div class="header">
     <div class="logo" aria-label="Logo">
